...
        tabBarInactiveTintColor: WARNA_TAB_PASIF,
        tabBarLabelStyle: tw`text-xs font-medium mb-1`,
      }}
    >
      <Tabs.Screen
        name="dashboard"
        options={{ title: 'Beranda', tabBarIcon: ({ color }) => <Home size={UKURAN_IKON} color={color} /> }}
      />
      <Tabs.Screen
        name="proyek/index"
        options={{ title: 'Proyek', tabBarIcon: ({ color }) => <Briefcase size={UKURAN_IKON} color={color} /> }}
      />
      <Tabs.Screen
        name="keuangan"
        options={{ title: 'Uang', tabBarIcon: ({ color }) => <Wallet size={UKURAN_IKON} color={color} /> }}
      />
      <Tabs.Screen
        name="profile"
        options={{ title: 'Profil', tabBarIcon: ({ color }) => <User size={UKURAN_IKON} color={color} /> }}
      />
      <Tabs.Screen name="proyek/[id]" options={{ href: null, tabBarStyle: { display: 'none' } }} />
    </Tabs>
  );
}

